--- a/jobs.html
+++ b/jobs.html
@@ -37,17 +37,17 @@
     				<span class="icon-bar"></span>
     				<span class="icon-bar"></span>
     			</button>
-    			<a class="brand" href="index.html">MathSight</a>
+    			<a class="brand" href="#">MathSight</a>
     			<div class="nav-collapse collapse">
     				<ul class="nav">
     					<li class="active">
     						<a href="index.html">Home</a>
     					</li>
     					<li>
-    						<a href="tour.html">About</a>
+    						<a href="#about">About</a>
     					</li>
     					<li>
-    						<a href="plans.html">Plans</a>
+    						<a href="#contact">Contact</a>
     					</li>
     				</ul>
     			</div>
