--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
             <p class="lead">A revolution in SEO.</p>
 			<a class="btn btn-large btn-success" href="plans.html">GET STARTED</a>
+			<p>We are drowning in information and starving for knowledge. – Rutherford D. Rogers</p>
           </div>
         </div>
     
