--- a/index.html
+++ b/index.html
@@ -112,20 +112,23 @@
         <hr>
 		
         <div class="row-fluid heading">
-          <div class="span6">
+          <div class="span12">
             <h1>MathSight</h1>
           </div>
         </div> 
             <div class="row-fluid subheading">
-          <div class="span6">
+          <div class="span12">
             <!-- Special typography from Bootstrap for lead paragraph. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
             <p class="lead">A revolution in SEO.</p>
+			<p>
+				<small>We are drowning in information and starving for knowledge. – Rutherford D. Rogers</small>
+				</p><p></p>
 			<a class="btn btn-large btn-success" href="plans.html">GET STARTED</a>
-        <div class="span6">
-			<p>We are drowning in information and starving for knowledge. – Rutherford D. Rogers</p>
           </div>
         </div>
+		
+		
     
         <hr>
     
