--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 <!-- http://creativecommons.org/licenses/ -->
 <div class="row-fluid footer">
   <div class="span12">
-    <p>© MathSight Ltd 2013 &nbsp; &nbsp;Terms of Service &nbsp; &nbsp;Privacy &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Run by MathSight Ltd in Richmond (Surrey, UK)</p>
+    <p><small>© MathSight Ltd 2013 &nbsp; &nbsp;Terms of Service &nbsp; &nbsp;Privacy &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Run by MathSight Ltd in Richmond (Surrey, UK)<small></p>
   </div>
 </div>
 
