--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <hr>
     
 		<!-- /container -->
-		    <div class="hero-unit"><h1>Read our white paper</h1><p>The insights from Penguin 2.0 - see what Google is rewarding and punishing</p>
+		    <div class="hero-unit"><h1>Read Our White Paper</h1><p>...</p><p>The insights from Penguin 2.0 - see what Google is rewarding and punishing</p>
 			<a href="MathSight-WhitePaper.pdf" >Click here to Download</a>
 			</div>
 	
