--- a/tour.html
+++ b/tour.html
@@ -41,9 +41,10 @@
           <a class="brand" href="#">MathSight</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="plans.html">Plans</a></li>
+                <li><a href="tour.html">Tour</a></li>
+				<li><a href="api.html">API</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
