--- a/tour.html
+++ b/tour.html
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">MathSight</a>
+          <a class="brand" href="~/">MathSight</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
                 <li class="active"><a href="#">Home</a></li>
