--- a/tour.html
+++ b/tour.html
@@ -42,9 +42,9 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
                 <li class="active"><a href="/">Home</a></li>
-                <li><a href="/plans">Plans</a></li>
-                <li><a href="/tour">Tour</a></li>
-				<li><a href="/api">API</a></li>
+                <li><a href="/plans.html">Plans</a></li>
+                <li><a href="/tour.html">Tour</a></li>
+				<li><a href="/api.html">API</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
