moved demo.html

--- a/tour.html
+++ b/tour.html
@@ -60,7 +60,7 @@
     <div class="hero-unit">
 		<h1>StatSEO</h1>
 		<p>Get figures on your pages - see what Google is rewarding and punishing</p>
-		<p><li><a href="/tour/demo.html">See a demo</a></li></p>
+		<p><a href="/demo.html">See a demo</a></p>
 	</div>
 	<div class="hero-unit"><h1>LinkStat</h1><p>De-clutter your linking sites</p></div>
 
