prep for demo.html

--- a/tour.html
+++ b/tour.html
@@ -64,6 +64,15 @@
 	</div>
 	<div class="hero-unit"><h1>LinkStat</h1><p>De-clutter your linking sites</p></div>
 
+
+      <!-- Not crucial, but we put this under a CC By-SA 3.0 license. -->
+<!-- http://creativecommons.org/licenses/ -->
+<div class="row-fluid footer">
+  <div class="span12">
+    <p><small>© MathSight Ltd 2013 &nbsp; &nbsp;Terms of Service &nbsp; &nbsp;Privacy &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Run by MathSight Ltd in Richmond, UK<small></p>
+  </div>
+</div>
+
     <style>
       
       /* To push content below navbar */
