updates to demo.html

--- a/demo.html
+++ b/demo.html
@@ -164,6 +164,15 @@
           <h1>StatSEO: Demonstration</h1>
         </div>
       </div> 
+	  
+	  
+	  <div id="chart1" style="height:300px; width:500px;"></div>
+	  <div class="code prettyprint">
+	  <pre class="code prettyprint brush: js"></pre>
+	  </div>
+	  
+	  
+	  
       <div class="row-fluid subheading">
         <div class="span12">
           <!-- Special typography from Bootstrap for lead paragraph. -->
