updates to demo.html

--- a/demo.html
+++ b/demo.html
@@ -109,8 +109,7 @@
 	<script class="code" type="text/javascript">
 	$(document).ready(function(){
 	  var data = [
-	    ['Heavy Industry', 12],['Retail', 9], ['Light Industry', 14], 
-	    ['Out of home', 16],['Commuting', 7], ['Orientation', 9]
+	    ['Good urls', 687],['Bad urls', 503]
 	  ];
 	  var plot1 = jQuery.jqplot ('chart1', [data], 
 	    { 
@@ -178,8 +177,11 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
+            <p class="span5 copy">
+				This domain's pages by StatSEO quality:
+            </p>
           <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
-		  <div id="chart1" style="height:300px; width:500px;"></div>
+		  <div id="chart1" style="height:300px; width:480px;"></div>
 		  <div class="code prettyprint">
 		  <pre class="code prettyprint brush: js"></pre>
 		  </div>
