--- a/demo.html
+++ b/demo.html
@@ -177,9 +177,11 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
+			<div class="span4">
             <p class="span5 copy">
 				This domain's pages by StatSEO quality:
             </p>
+		</div>
           <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
 		  <div id="chart1" style="height:300px; width:480px;"></div>
 		  <div class="code prettyprint">
