updates to demo.html

--- a/demo.html
+++ b/demo.html
@@ -178,16 +178,20 @@
 	  <div class="row-fluid pitch">
 
 		  <div class="span5 offset1 video">
-			  <div class="span4">
-				  <p class="span5 copy">
-					  This domain's pages by StatSEO quality:
-				  </p>
+			  <div class="row-fluid">
+				  <div class="span10 offset1">
+					  <p class="span5 copy">
+						  This domain's pages by StatSEO quality:
+					  </p>
+				  </div>
 			  </div>
-			  <div class="span4">
-				  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
-				  <div id="chart1" style="height:300px; width:480px;"></div>
-				  <div class="code prettyprint">
-					  <pre class="code prettyprint brush: js"></pre>
+			  <div class="row-fluid">
+				  <div class="span10 offset1">
+					  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
+					  <div id="chart1" style="height:300px; width:480px;"></div>
+					  <div class="code prettyprint">
+						  <pre class="code prettyprint brush: js"></pre>
+					  </div>
 				  </div>
 			  </div>
 		  </div>
