--- a/demo.html
+++ b/demo.html
@@ -179,24 +179,22 @@
 	  </div>
 	  <div class="row-fluid pitch">
 
-		  <div class="span5 offset1 video">
-			  <div class="row-fluid">
-				  <div class="span10 offset1">
-					  <p>
-						  This domain's pages by StatSEO quality:
-					  </p>
-				  </div>
-			  </div>
-			  <div class="row-fluid">
-
-					  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
-					  <div id="chart1" style="height:300px; width:480px;"></div>
-					  <div class="code prettyprint">
-						  <pre class="code prettyprint brush: js"></pre>
-					  </div>
-
-			  </div>
+		  <div class="span5 offset1 copy">
+			  <p>
+				  This domain's pages by StatSEO quality:
+			  </p>
 		  </div>
+	
+		  <div class="span5 offset1 asset">
+
+			  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
+			  <div id="chart1" style="height:300px; width:500px;"></div>
+			  <div class="code prettyprint">
+				  <pre class="code prettyprint brush: js"></pre>
+			  </div>
+
+		  </div>
+	  </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
         <div class="span5 actions">
@@ -213,7 +211,7 @@
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$6000</h3> <p>of $10,000</p>
+                  <h3>503</h3> <p>of 1190 urls</p>
                 </div>
               </div>
               <div class="span4">
