updates to demo.html

--- a/demo.html
+++ b/demo.html
@@ -179,13 +179,13 @@
 	  </div>
 	  <div class="row-fluid pitch">
 
-		  <div class="span5 offset1 copy">
+		  <div class="span10 copy">
 			  <p>
 				  This domain's pages by StatSEO quality:
 			  </p>
 		  </div>
 	
-		  <div class="span5 offset1 asset">
+		  <div class="span10 asset">
 
 			  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
 			  <div id="chart1" style="height:300px; width:500px;"></div>
