updates to demo.html

--- a/demo.html
+++ b/demo.html
@@ -194,7 +194,7 @@
 
 		  <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
 		  <div class="span5 actions">
-			  <div class="row-fluid">
+			  <!-- <div class="row-fluid"> -->
 				  <div class="span8 offset2">
 					  <div class="row-fluid statistics">
 						  <div class="span4">
@@ -243,7 +243,7 @@
 						  </div>
 					  </div>
 				  </div>
-			  </div>
+			  <!-- </div> -->
 		  </div>
 
       <!-- Beyond this part the marketing copy begins. -->
