updates to demo.html

--- a/demo.html
+++ b/demo.html
@@ -180,21 +180,22 @@
 	  <div class="row-fluid pitch">
 
 		  <div class="span5 asset">
-			  <p>
-				  This domain's pages by StatSEO quality:
-			  </p>
-			  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
-			  <div id="chart1" style="height:300px; width:500px;"></div>
-			  <div class="code prettyprint">
-				  <pre class="code prettyprint brush: js"></pre>
+			  <div class="row-fluid">
+				  <p>
+					  This domain's pages by StatSEO quality:
+				  </p>
+				  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
+				  <div id="chart1" style="height:300px; width:500px;"></div>
+				  <div class="code prettyprint">
+					  <pre class="code prettyprint brush: js"></pre>
+				  </div>
 			  </div>
-
 		  </div>
 	 
 
 		  <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
 		  <div class="span5 actions">
-			  <!-- <div class="row-fluid"> -->
+			  <div class="row-fluid">
 				  <div class="span8 offset2">
 					  <div class="row-fluid statistics">
 						  <div class="span4">
@@ -243,7 +244,7 @@
 						  </div>
 					  </div>
 				  </div>
-			  <!-- </div> -->
+			  </div>
 		  </div>
 
       <!-- Beyond this part the marketing copy begins. -->
