--- a/demo.html
+++ b/demo.html
@@ -179,8 +179,8 @@
 	  </div>
 	  <div class="row-fluid pitch">
 
-		  <div class="span5 asset">
-			  <div class="row-fluid">
+		  <div class="span5 offset1 asset">
+
 				  <p>
 					  This domain's pages by StatSEO quality:
 				  </p>
@@ -189,7 +189,7 @@
 				  <div class="code prettyprint">
 					  <pre class="code prettyprint brush: js"></pre>
 				  </div>
-			  </div>
+
 		  </div>
 	 
 
