--- a/demo.html
+++ b/demo.html
@@ -196,30 +196,54 @@
 		  <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
 		  <div class="span5 actions">
 			  <div class="row-fluid">
-				  <table>
-				      <thead>
-				          <tr>
-				              <th>#</th>
-				              <th>First Name</th>
-				              <th>Last Name</th>
-				              <th>Language</th>
-				          </tr>
-				      </thead>
-				      <tbody>
-				          <tr>
-				              <td>1</td>
-				              <td>Some</td>
-				              <td>One</td>
-				              <td>English</td>
-				          </tr>
-				          <tr>
-				              <td>2</td>
-				              <td>Joe</td>
-				              <td>Sixpack</td>
-				              <td>English</td>
-				          </tr>
-				      </tbody>
-				  </table>
+				  <div class="span8 offset2">
+					  <div class="row-fluid statistics">
+						  <div class="span4">
+							  <!-- linediv-l and linediv-r give dividing lines that look
+								  different in horizontal and vertical layouts, illustrating
+								  media queries. -->
+								  <div class="linediv-l">
+									  <h3>1000</h3> <p>backers</p>
+								  </div>
+							  </div>
+							  <div class="span4">
+								  <div class="linediv-c">
+									  <h3>503</h3> <p>of 1190 urls</p>
+								  </div>
+							  </div>
+							  <div class="span4">
+								  <div class="linediv-r">
+									  <h3>10</h3> <p>days left</p>
+								  </div>
+							  </div>
+						  </div>
+					  </div>
+					  <div class="row-fluid">
+						  <div class="span10 offset1">
+							  <!-- Bootstrap progress bar -->
+							  <!-- http://twitter.github.io/bootstrap/components.html#progress -->
+							  <div class="thermometer progress active">
+								  <div class="bar bar-success" style="width: 60%;"></div>
+								  <div class="bar bar-warning" style="width: 40%;"></div>
+							  </div>
+						  </div>
+					  </div>
+					  <div class="row-fluid">
+						  <div class="span6 offset3 order">
+							  <!-- Standard Bootstrap button. -->
+							  <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
+							  <button class="btn btn-success btn-large">Preorder</button>
+						  </div>
+					  </div>
+					  <div class="row-fluid">
+						  <div class="span8 offset2 social">
+							  <!-- Social buttons are not included in default Bootstrap. -->
+							  <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
+							  <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+							  <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+						  </div>
+					  </div>
+				  </div>
 			  </div>
 		  </div>
 
@@ -232,19 +256,32 @@
           <img class="img-polaroid"  alt="Placeholder" src="http://placehold.it/480x300">
         </div>
         <div class="span5 copy">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
-            porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-            mollis justo velit at nunc. Fusce nec egestas sem. Donec
-            fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-            volutpat lorem ut congue malesuada. In facilisis scelerisque
-            turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-            quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-            risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
-            consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-            rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
-          </p>
+ 
+			  <table>
+			      <thead>
+			          <tr>
+			              <th>#</th>
+			              <th>First Name</th>
+			              <th>Last Name</th>
+			              <th>Language</th>
+			          </tr>
+			      </thead>
+			      <tbody>
+			          <tr>
+			              <td>1</td>
+			              <td>Some</td>
+			              <td>One</td>
+			              <td>English</td>
+			          </tr>
+			          <tr>
+			              <td>2</td>
+			              <td>Joe</td>
+			              <td>Sixpack</td>
+			              <td>English</td>
+			          </tr>
+			      </tbody>
+			  </table>
+      
         </div>
       </div>
 
