--- a/demo.html
+++ b/demo.html
@@ -257,7 +257,7 @@
         </div>
         <div class="span5 copy">
  
-			  <table>
+			  <table class="table table-striped table-bordered table-condensed">
 			      <thead>
 			          <tr>
 			              <th>#</th>
