--- a/demo.html
+++ b/demo.html
@@ -179,7 +179,7 @@
 	  </div>
 	  <div class="row-fluid pitch">
 
-		  <div class="span5 offset1 asset">
+		  <div class="span10 offset1 asset">
 
 				  <p>
 					  This domain's pages by StatSEO quality:
@@ -194,7 +194,44 @@
 	 
 
 		  <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
-
+		  <div class="span5 actions">
+			  <div class="row-fluid">
+				  <div class="span8 offset2">
+					  <div class="row-fluid statistics">
+						  <div class="span4">
+							  <!-- linediv-l and linediv-r give dividing lines that look
+								  different in horizontal and vertical layouts, illustrating
+								  media queries. -->
+								  <div class="linediv-l">
+									  <h3>1000</h3> <p>backers</p>
+								  </div>
+							  </div>
+							  <div class="span4">
+								  <div class="linediv-c">
+									  <h3>503</h3> <p>of 1190 urls</p>
+								  </div>
+							  </div>
+							  <div class="span4">
+								  <div class="linediv-r">
+									  <h3>10</h3> <p>days left</p>
+								  </div>
+							  </div>
+						  </div>
+					  </div>
+					  <div class="row-fluid">
+						  <div class="span10 offset1">
+							  <!-- Bootstrap progress bar -->
+							  <!-- http://twitter.github.io/bootstrap/components.html#progress -->
+							  <div class="thermometer progress active">
+								  <div class="bar bar-success" style="width: 60%;"></div>
+								  <div class="bar bar-warning" style="width: 40%;"></div>
+							  </div>
+						  </div>
+					  </div>
+					  
+				  </div>
+			  </div>
+		  </div>
 
       <!-- Beyond this part the marketing copy begins. -->
       <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
