--- a/demo.html
+++ b/demo.html
@@ -179,7 +179,7 @@
 	  </div>
 	  <div class="row-fluid pitch">
 
-		  <div class="span5 offset1 asset">
+		  <div class="span6 offset1 asset">
 
 				  <p>
 					  This domain's pages by StatSEO quality:
@@ -194,10 +194,35 @@
 	 
 
 		  <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
-          <div class="span5 offset1 asset">
-            <img class="img-polaroid"  alt="Placeholder" src="http://placehold.it/480x300">
+          <div class="span5 copy">
+ 
+  			  <table class="table table-striped table-bordered table-condensed">
+  			      <thead>
+  			          <tr>
+  			              <th>#</th>
+  			              <th>First Name</th>
+  			              <th>Last Name</th>
+  			              <th>Language</th>
+  			          </tr>
+  			      </thead>
+  			      <tbody>
+  			          <tr>
+  			              <td>1</td>
+  			              <td>Some</td>
+  			              <td>One</td>
+  			              <td>English</td>
+  			          </tr>
+  			          <tr>
+  			              <td>2</td>
+  			              <td>Joe</td>
+  			              <td>Sixpack</td>
+  			              <td>English</td>
+  			          </tr>
+  			      </tbody>
+  			  </table>
+      
           </div>
-		 
+		  
 
       <!-- Beyond this part the marketing copy begins. -->
       <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
