updates to demo.html

--- a/demo.html
+++ b/demo.html
@@ -200,23 +200,29 @@
   			      <thead>
   			          <tr>
   			              <th>#</th>
-  			              <th>First Name</th>
-  			              <th>Last Name</th>
-  			              <th>Language</th>
+  			              <th>Onsite URL quality</th>
+  			              <th>Number URLs</th>
+  			              <th>Percent URLs</th>
   			          </tr>
   			      </thead>
   			      <tbody>
   			          <tr>
   			              <td>1</td>
-  			              <td>Some</td>
-  			              <td>One</td>
-  			              <td>English</td>
+  			              <td>Good</td>
+  			              <td>687</td>
+  			              <td>58%</td>
   			          </tr>
   			          <tr>
   			              <td>2</td>
-  			              <td>Joe</td>
-  			              <td>Sixpack</td>
-  			              <td>English</td>
+  			              <td>Bad</td>
+  			              <td>503</td>
+  			              <td>42%</td>
+  			          </tr>
+  			          <tr>
+  			              <td>TOTAL</td>
+  			              <td></td>
+  			              <td>1190</td>
+  			              <td>100%</td>
   			          </tr>
   			      </tbody>
   			  </table>
