updates to demo.html

--- a/demo.html
+++ b/demo.html
@@ -344,12 +344,12 @@
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
                      data-parent="#accordion2" href="#collapseOne">
-                    What does FAQ stand for?
+                    What are the limitations of StatSEO?
                   </a>
                 </div>
                 <div id="collapseOne" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    Frequently Asked Question.
+                    As with any statistical analysis there are limitations- our use of 95% confidence interval implies by definition at least a 5% rate of erroneous identification (i.e. 1 in 20).
                   </div>
                 </div>
               </div>
@@ -357,12 +357,12 @@
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
                      data-parent="#accordion2" href="#collapseTwo">
-                    What's a Frequently Asked Question?
+                    What's is the difference between Good, OK and Bad?
                   </a>
                 </div>
                 <div id="collapseTwo" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    A question which is commonly asked by users.
+                    In all the two pie charts shown here, ‘bad’ refers to links or pages that are likely to suffer detrimental effect, ‘OK’ refers to those that are neutral without any significant effect seen and ‘good’ refers to link or pages with feature values assessed to have positive influence on visitor traffic.
                   </div>
                 </div>
               </div>
