updates to demo.html

--- a/demo.html
+++ b/demo.html
@@ -329,7 +329,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid"  alt="Placeholder" src="http://placehold.it/480x300">
+          <img class="img-polaroid"  alt="Placeholder" src="https://www.dropbox.com/s/3rt54ghxjq5txbq/SQ_histo.png">
         </div>
       </div>
 
@@ -362,7 +362,7 @@
                 </div>
                 <div id="collapseTwo" class="accordion-body collapse">
                   <div class="accordion-inner">
-                    In all the two pie charts shown here, ‘bad’ refers to links or pages that are likely to suffer detrimental effect, ‘OK’ refers to those that are neutral without any significant effect seen and ‘good’ refers to link or pages with feature values assessed to have positive influence on visitor traffic.
+                    In all the pie charts shown here, ‘bad’ refers to links or pages that are likely to suffer detrimental effect, ‘OK’ refers to those that are neutral without any significant effect seen and ‘good’ refers to link or pages with feature values assessed to have positive influence on visitor traffic.
                   </div>
                 </div>
               </div>
