updates to demo.html

--- a/demo.html
+++ b/demo.html
@@ -329,7 +329,7 @@
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid"  alt="Placeholder" src="https://www.dropbox.com/s/3rt54ghxjq5txbq/SQ_histo.png">
+          <img class="img-polaroid"  alt="Placeholder" src="SQ_histo.png">
         </div>
       </div>
 
