updates to demo.html

--- a/demo.html
+++ b/demo.html
@@ -133,7 +133,7 @@
 	<script class="code" type="text/javascript">
 	$(document).ready(function(){
 	  var data = [
-	    ['Good links', 687],['OK links', 503],['Bad links', 503]
+	    ['Good links', 24],['OK links', 397],['Bad links', 104]
 	  ];
 	  var plot2 = jQuery.jqplot ('chart2', [data], 
 	    {
@@ -260,7 +260,7 @@
       <div class="row-fluid section1">
         <div class="span6 offset1 asset">
 		  <p>
-			  This domain's offsite pages by StatSEO quality:
+			  This domain's offsite pages by readability:
 		  </p>
 		  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
 		  <div id="chart2" style="height:300px; width:500px;"></div>
