onsite table page edited

--- a/onsite.html
+++ b/onsite.html
@@ -19,7 +19,7 @@
 					$('#example').dataTable( {
 						"bProcessing": true,
 						"bServerSide": true,
-						"sAjaxSource": "scripts/jsonp.php",
+						"sAjaxSource": "datatables/scripts/jsonp.php",
 						"fnServerData": function( sUrl, aoData, fnCallback, oSettings ) {
 							oSettings.jqXHR = $.ajax( {
 								"url": sUrl,
