onsite table page edited

--- a/demo.html
+++ b/demo.html
@@ -205,7 +205,10 @@
 		  <div class="span6 offset1 asset">
 
 				  <p>
-					  This domain's onsite pages by StatSEO quality:
+					  This domain's onsite pages by StatSEO quality
+				  </p>
+				  <p>
+				  <a href="/onsite.html">Click for onsite influential feature summary</a>
 				  </p>
 				  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
 				  <div id="chart1" style="height:300px; width:500px;"></div>
