--- a/onsite.html
+++ b/onsite.html
@@ -127,12 +127,26 @@
 			$('#example').dataTable( {
 				"aaData": aDataSet,
 				"aoColumns": [
-					{ "sTitle": "Highlighted Feature" },
-					{ "sTitle": "Influence Rank" , "sClass": "center"},
-					{ "sTitle": "Losing Mean" , "sClass": "center"},
-					{ "sTitle": "Winning Mean" , "sClass": "center"},
-					{ "sTitle": "Mean Value", "sClass": "center" },
+				{ "sTitle": "Highlighted Feature" },
+				{ "sTitle": "Influence Rank" , "sClass": "center"},
+				{ "sTitle": "Losing Mean" , "sClass": "center"},
+				{ "sTitle": "Winning Mean" , "sClass": "center"},
+				{ "sTitle": "Mean Value", "sClass": "center" },
 				]
+			} );
+			$('#exampleDB').dataTable( {
+				"bProcessing": true,
+				"bServerSide": true,
+				"sAjaxSource": "datatables/scripts/jsonp.php",
+				"fnServerData": function( sUrl, aoData, fnCallback, oSettings ) {
+					oSettings.jqXHR = $.ajax( {
+						"url": sUrl,
+						"data": aoData,
+						"success": fnCallback,
+						"dataType": "jsonp",
+						"cache": false
+					} );
+				}
 			} );	
 		} );
 			</script>
@@ -290,6 +304,36 @@
 		  <div class="full_width big">
 			  Example with data from www.leighmans.com
 		  </div>
+		  <h2>List of websites</h2>
+		  			<div id="dynamic">
+		  <table cellpadding="0" cellspacing="0" border="0" class="display" id="exampleDB">
+		  	<thead>
+		  		<tr>
+		  			<th width="20%">Site name</th>
+		  			<th width="25%">URL</th>
+		  			<th width="25%">X features Location</th>
+		  			<th width="15%">y features Location</th>
+		  			<th width="15%">Created</th>
+		  		</tr>
+		  	</thead>
+		  	<tbody>
+		  		<tr>
+		  			<td colspan="5" class="dataTables_empty">Loading data from server</td>
+		  		</tr>
+		  	</tbody>
+		  	<tfoot>
+		  		<tr>
+		  			<th>Site name</th>
+		  			<th>URL</th>
+		  			<th>X features Location</th>
+		  			<th>y features Location</th>
+		  			<th>Created</th>
+		  		</tr>
+		  	</tfoot>
+		  </table>
+		  			</div>
+		  			<div class="spacer"></div>
+		  
 
 		  <h2>Onsite StatSEO Feature Influence</h2>
 		  <div id="dynamic">
