--- a/onsite.html
+++ b/onsite.html
@@ -123,8 +123,8 @@
 		];
 		
 		$(document).ready(function() {
-			$('#dynamic').html( '<table cellpadding="0" cellspacing="0" border="0" class="display" id="example"></table>' );
-			$('#example').dataTable( {
+			$('#dynamic1').html( '<table cellpadding="0" cellspacing="0" border="0" class="display" id="example"></table>' );
+			$('#example1').dataTable( {
 				"aaData": aDataSet,
 				"aoColumns": [
 				{ "sTitle": "Highlighted Feature" },
@@ -336,7 +336,7 @@
 		  
 
 		  <h2>Onsite StatSEO Feature Influence</h2>
-		  <div id="dynamic">
+		  <div id="dynamic1">
 			  
 		  </div>
 
