offsite table page created and  edited

--- a/demo.html
+++ b/demo.html
@@ -270,6 +270,9 @@
 		  <p>
 			  This domain's offsite pages by readability:
 		  </p>
+		  <p>
+		  <a href="/offsite.html">Click for offsite readability feature summary</a>
+		  </p>
 		  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
 		  <div id="chart2" style="height:300px; width:500px;"></div>
 		  <div class="code prettyprint">
