--- a/offsite.html
+++ b/offsite.html
@@ -363,7 +363,7 @@
 			  Example with data from www.leighmans.com
 		  </div>
 
-		  <h2>Onsite StatSEO Feature Influence</h2>
+		  <h2>Offsite Premium Features: Readability</h2>
 		  <div id="dynamic">
 			  
 		  </div>
@@ -401,7 +401,31 @@
 				  </div>
 				  <div id="collapseTwo" class="accordion-body collapse">
 					  <div class="accordion-inner">
-						  It has been shown that recent Google algorithm updates have targetted the quality of offsite content, hence we saw a need to include this information in our analyses.
+						  It has been shown that recent Google algorithm updates (in particular the Penguin series) have targetted the quality of offsite content, hence we saw a need to include this information in our analyses.
+					  </div>
+				  </div>
+				  <div class="accordion-group">
+					  <div class="accordion-heading">
+						  <a class="accordion-toggle" data-toggle="collapse"
+						  data-parent="#accordion2" href="#collapseTwo">
+						  What is Dale Chall Readability?
+					  </a>
+				  </div>
+				  <div id="collapseTwo" class="accordion-body collapse">
+					  <div class="accordion-inner">
+						  The Dale–Chall readability formula is a readability test that provides a numeric gauge of the comprehension difficulty that readers will have when reading a text. It uses a list of words that groups of fourth-grade American students could reliably understand, considering any word not on that list to be difficult. See <a href="http://en.wikipedia.org/wiki/Dale%E2%80%93Chall_readability_formula">more here</a>. 
+					  </div>
+				  </div>
+				  <div class="accordion-group">
+					  <div class="accordion-heading">
+						  <a class="accordion-toggle" data-toggle="collapse"
+						  data-parent="#accordion2" href="#collapseTwo">
+						  What are Flesch–Kincaid readability tests?
+					  </a>
+				  </div>
+				  <div id="collapseTwo" class="accordion-body collapse">
+					  <div class="accordion-inner">
+						  The Flesch/Flesch–Kincaid readability tests are readability tests designed to indicate comprehension difficulty when reading a passage of contemporary academic English. There are two tests, the Flesch Reading Ease, and the Flesch–Kincaid Grade Level. Although they use the same core measures (word length and sentence length), they have different weighting factors. The results of the two tests correlate approximately inversely: a text with a comparatively high score on the Reading Ease test should have a lower score on the Grade Level test. See <a href="http://en.wikipedia.org/wiki/Flesch%E2%80%93Kincaid_readability_tests">more here</a>. 
 					  </div>
 				  </div>
 			  </div>
