offsite and onsite table page edited

--- a/onsite.html
+++ b/onsite.html
@@ -296,7 +296,11 @@
 		  <div id="dynamic">
 			  
 		  </div>
-		  
+	
+		  <div class="spacer"></div>
+		  <p>
+		  <a href="/demo.html">Return to top level summary</a>
+		  </p>
 		  <div class="spacer"></div>
 
 		  <!-- For the FAQ, we introduce a little bit of JS, using the accordion. -->
@@ -310,12 +314,12 @@
 						  <div class="accordion-heading">
 							  <a class="accordion-toggle" data-toggle="collapse"
 							  data-parent="#accordion2" href="#collapseOne">
-							  What are the limitations of StatSEO?
+							  Which features does MathSight monitor for me?
 						  </a>
 					  </div>
 					  <div id="collapseOne" class="accordion-body collapse">
 						  <div class="accordion-inner">
-							  As with any statistical analysis there are limitations- our use of 95% confidence interval implies by definition at least a 5% rate of erroneous identification (i.e. 1 in 20).
+							  Over 100 features taken straight from the html pages of your domain (related to structure and content), approximately 20 calculated (or premium) features (such as ratios of one feature to another) and 5-10 advanced features which analyse backlinks and their effect on the onsite.
 						  </div>
 					  </div>
 				  </div>
@@ -323,7 +327,7 @@
 					  <div class="accordion-heading">
 						  <a class="accordion-toggle" data-toggle="collapse"
 						  data-parent="#accordion2" href="#collapseTwo">
-						  What's is the difference between Good, OK and Bad?
+						  What is the difference between Good, OK and Bad?
 					  </a>
 				  </div>
 				  <div id="collapseTwo" class="accordion-body collapse">
