--- a/offsite.html
+++ b/offsite.html
@@ -369,6 +369,10 @@
 		  </div>
 		  
 		  <div class="spacer"></div>
+		  <p>
+		  <a href="/demo.html">Return to top level summary</a>
+		  </p>
+		  <div class="spacer"></div>
 
 		  <!-- For the FAQ, we introduce a little bit of JS, using the accordion. -->
 		  <!-- This brings in jquery.js and bootstrap.js as dependencies. -->
