offsite and onsite table page edited

--- a/onsite.html
+++ b/onsite.html
@@ -298,6 +298,8 @@
 		  </div>
 	
 		  <div class="spacer"></div>
+		  <div class="spacer"></div>
+		  <div class="spacer"></div>
 		  <p>
 		  <a href="/demo.html">Return to top level summary</a>
 		  </p>
