offsite and onsite table page edited

--- a/onsite.html
+++ b/onsite.html
@@ -131,7 +131,7 @@
 					{ "sTitle": "Influence Rank" , "sClass": "center"},
 					{ "sTitle": "Losing Mean" , "sClass": "center"},
 					{ "sTitle": "Winning Mean" , "sClass": "center"},
-					{ "sTitle": "Mean Value", "sClass": "center" },
+					{ "sTitle": "Mean Value (this domain)", "sClass": "center" },
 				]
 			} );
 				
