offsite and onsite table page edited

--- a/onsite.html
+++ b/onsite.html
@@ -327,12 +327,12 @@
 					  <div class="accordion-heading">
 						  <a class="accordion-toggle" data-toggle="collapse"
 						  data-parent="#accordion2" href="#collapseTwo">
-						  What is the difference between Good, OK and Bad?
+						  What is an influential feature?
 					  </a>
 				  </div>
 				  <div id="collapseTwo" class="accordion-body collapse">
 					  <div class="accordion-inner">
-						  In all the pie charts shown here, ‘bad’ refers to links or pages that are likely to suffer detrimental effect, ‘OK’ refers to those that are neutral without any significant effect seen and ‘good’ refers to link or pages with feature values assessed to have positive influence on visitor traffic.
+						  All the features assessed here have been assessed to have differing levels of influence (or impact) on cumulative daily page view organic search traffic for their containing html page. We wanted to give you the opportunity to see which features had the greatest influence, and which have limited impact. Feel free to click on 'Influence Rank' tab above to sort them as required.
 					  </div>
 				  </div>
 			  </div>
