offsite and onsite menus edited

--- a/onsite.html
+++ b/onsite.html
@@ -257,6 +257,7 @@
                 <li><a href="/plans.html">Plans</a></li>
                 <li><a href="/tour.html">Tour</a></li>
 				<li><a href="/api.html">API</a></li>
+				<li><a href="/jobs.html">Jobs</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
