--- a/jobs.html
+++ b/jobs.html
@@ -37,18 +37,14 @@
     				<span class="icon-bar"></span>
     				<span class="icon-bar"></span>
     			</button>
-    			<a class="brand" href="#">MathSight</a>
+    			<a class="brand" href="/">MathSight</a>
     			<div class="nav-collapse collapse">
     				<ul class="nav">
-    					<li class="active">
-    						<a href="index.html">Home</a>
-    					</li>
-    					<li>
-    						<a href="#about">About</a>
-    					</li>
-    					<li>
-    						<a href="#contact">Contact</a>
-    					</li>
+		                <li class="active"><a href="/">Home</a></li>
+		                <li><a href="/plans.html">Plans</a></li>
+		                <li><a href="/tour.html">Tour</a></li>
+						<li><a href="/api.html">API</a></li>
+						<li><a href="/jobs.html">Jobs</a></li>
     				</ul>
     			</div>
     			<!--/.nav-collapse -->
