--- a/demo.html
+++ b/demo.html
@@ -214,7 +214,7 @@
 					  This domain's onsite pages by StatSEO quality
 				  </p>
 				  <p>
-				  <a href="/onsite.html">Click for onsite influential feature summary</a>
+				  <a onclick="alert('you clicked me!')" href="/onsite.html">Click for onsite influential feature summary</a>
 				  </p>
 				  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
 				  <div id="chart1" style="height:300px; width:500px;"></div>
