--- a/demo.html
+++ b/demo.html
@@ -217,7 +217,7 @@
 				  <a onclick="alert('you clicked me!')" href="/onsite.html">Click for onsite influential feature summary</a>
 				  </p>
 				  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
-				  <div id="chart1" style="height:300px; width:500px;"></div>
+				  <div onclick="alert('you clicked me!')" id="chart1" style="height:300px; width:500px;"></div>
 				  <div class="code prettyprint">
 					  <pre class="code prettyprint brush: js"></pre>
 				  </div>
