--- a/demo.html
+++ b/demo.html
@@ -214,10 +214,10 @@
 					  This domain's onsite pages by StatSEO quality
 				  </p>
 				  <p>
-				  <a onclick="alert('you clicked me!')" href="/onsite.html">Click for onsite influential feature summary</a>
+				  <a href="/onsite.html">Click for onsite influential feature summary</a>
 				  </p>
 				  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
-				  <div onclick="alert('you clicked me!')" id="chart1" style="height:300px; width:500px;"></div>
+				  <div href="/onsite.html" id="chart1" style="height:300px; width:500px;"></div>
 				  <div class="code prettyprint">
 					  <pre class="code prettyprint brush: js"></pre>
 				  </div>
@@ -228,7 +228,7 @@
 		  <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
           <div class="span4 copy">
  
-  			  <table class="table table-striped table-bordered table-condensed">
+  			  <table href="/onsite.html" class="table table-striped table-bordered table-condensed">
   			      <thead>
   			          <tr>
   			              <th>#</th>
@@ -275,7 +275,7 @@
 		  <a href="/offsite.html">Click for offsite readability feature summary</a>
 		  </p>
 		  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
-		  <div id="chart2" style="height:300px; width:500px;"></div>
+		  <div href="/offsite.html" id="chart2" style="height:300px; width:500px;"></div>
 		  <div class="code prettyprint">
 			  <pre class="code prettyprint brush: js"></pre>
 			  
@@ -284,7 +284,7 @@
         </div>
         <div class="span4 copy">
  
-			  <table class="table table-striped table-bordered table-condensed">
+			  <table href="/offsite.html" class="table table-striped table-bordered table-condensed">
 			      <thead>
 			          <tr>
 			              <th>#</th>
