--- a/demo.html
+++ b/demo.html
@@ -284,9 +284,9 @@
         </div>
         <div class="span4 copy">
  
-			  <table href="/offsite.html" class="table table-striped table-bordered table-condensed">
+			  <table class="table table-striped table-bordered table-condensed">
 			      <thead>
-			          <tr>
+			          <tr class='clickableRow' href="/offsite.html">
 			              <th>#</th>
 			              <th>Offsite backlink quality</th>
 			              <th>Number of links</th>
@@ -294,25 +294,25 @@
 			          </tr>
 			      </thead>
 			      <tbody>
-			          <tr>
+			          <tr class='clickableRow' href="/offsite.html">
 			              <td>1</td>
 			              <td>Good</td>
 			              <td>24</td>
 			              <td>4.6%</td>
 			          </tr>
-			          <tr>
+			          <tr class='clickableRow' href="/offsite.html">
 			              <td>2</td>
 			              <td>OK</td>
 			              <td>397</td>
 			              <td>75.6%</td>
 			          </tr>
-			          <tr>
+			          <tr class='clickableRow' href="/offsite.html">
 			              <td>3</td>
 			              <td>Bad</td>
 			              <td>104</td>
 			              <td>29.8%</td>
 			          </tr>
-			          <tr>
+			          <tr class='clickableRow' href="/offsite.html">
 			              <td>TOTAL</td>
 			              <td></td>
 			              <td>525</td>
