--- a/demo.html
+++ b/demo.html
@@ -108,6 +108,14 @@
       }
     </style>
 	
+	<script>
+	jQuery(document).ready(function($) {
+	      $(".clickableRow").click(function() {
+	            window.document.location = $(this).attr("href");
+	      });
+	});
+	</script>
+	
 	<script class="code" type="text/javascript">
 	$(document).ready(function(){
 	  var data = [
