--- a/demo.html
+++ b/demo.html
@@ -214,9 +214,9 @@
 			  <p class="lead">for www.leighmans.com</p>
 		  </div>
 	  </div>
-	  <div class="row-fluid pitch">
+	  <div class="row-fluid">
 
-		  <div class="span6 offset1 asset">
+		  <div class="span6">
 
 				  <p>
 					  This domain's onsite pages by StatSEO quality
@@ -234,7 +234,7 @@
 	 
 
 		  <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
-          <div class="span4 copy">
+          <div class="span6">
  
   			  <table href="/onsite.html" class="table table-striped table-bordered table-condensed">
   			      <thead>
@@ -275,7 +275,7 @@
       <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
-        <div class="span6 offset1 asset">
+        <div class="span6">
 		  <p>
 			  This domain's offsite pages by readability:
 		  </p>
@@ -290,7 +290,7 @@
 		  </div>
           
         </div>
-        <div class="span4 copy">
+        <div class="span6">
  
 			  <table class="table table-striped table-bordered table-condensed">
 			      <thead>
@@ -334,7 +334,7 @@
       </div>
 
       <div class="row-fluid section2">
-        <div class="span5 offset1 copy copy-right">
+        <div class="span6">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
             porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
@@ -349,7 +349,7 @@
             nunc. Fusce nec egestas sem. Donec fringilla.
           </p>
         </div>
-        <div class="span5 asset">
+        <div class="span6">
           <img class="img-polaroid"  alt="Placeholder" src="SQ_histo.png">
         </div>
       </div>
