demo html page update

--- a/demo.html
+++ b/demo.html
@@ -116,6 +116,7 @@
 	});
 	</script>
 	
+	
 	<script class="code" type="text/javascript">
 	$(document).ready(function(){
 	  var data = [
@@ -265,7 +266,7 @@
 
 
 			  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
-			  <div href="/onsite.html" id="chart1" style="height:300px; width:500px;"></div>
+			  <div class='clickableRow' href="/onsite.html" id="chart1" style="height:300px; width:500px;"></div>
 			  <div class="code prettyprint">
 				  <pre class="code prettyprint brush: js"></pre>
 			  </div>
