demo html page update

--- a/demo.html
+++ b/demo.html
@@ -217,7 +217,7 @@
 	  </div>
 	  
 	  <div class="well">
-		  <h2>Onsite pages by StatSEO quality</h2>
+		  <h2>Onsite pages by StatSEO quotient</h2>
 		  <p></p>
 	  </div>
 	  <!-- <p>
@@ -336,7 +336,7 @@
 			  <div class="span6 offset1 asset">
 	
 				  <!-- <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300"> -->
-				  <div href="/offsite.html" id="chart2" style="height:300px; width:500px;"></div>
+				  <div class='clickableRow' href="/offsite.html" id="chart2" style="height:300px; width:500px;"></div>
 				  <div class="code prettyprint">
 					  <pre class="code prettyprint brush: js"></pre>
 			  
