onsite page update

--- a/demo.html
+++ b/demo.html
@@ -390,7 +390,7 @@
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
                      data-parent="#accordion2" href="#collapseTwo">
-                    What's is the difference between Good, OK and Bad?
+                    What's the difference between Good, OK and Bad?
                   </a>
                 </div>
                 <div id="collapseTwo" class="accordion-body collapse">
