--- a/onsite.html
+++ b/onsite.html
@@ -122,6 +122,16 @@
 		['number of difficult words', 103,200.8319474,311.0396877,359.4857778]
 		];
 		
+	
+		$(document).ready(function() {
+		    var bDataSet;
+
+		    $.getJSON('./json/test.json', function(data) {
+		        bDataSet = data.items;
+		        console.log(bDataSet);
+		    });
+		});
+		
 		$(document).ready(function() {
 			$('#dynamic').html( '<table cellpadding="0" cellspacing="0" border="0" class="display" id="example"></table>' );
 			$('#example').dataTable( {
@@ -276,10 +286,7 @@
           <h1>StatSEO: Onsite drilldown</h1>
         </div>
       </div> 
-	    
-		
-		
-		
+
       <div class="row-fluid subheading">
 		  <div class="span12">
 			  <!-- Special typography from Bootstrap for lead paragraph. -->
