--- a/onsite.html
+++ b/onsite.html
@@ -135,7 +135,7 @@
 		$(document).ready(function() {
 			$('#dynamic').html( '<table cellpadding="0" cellspacing="0" border="0" class="display" id="example"></table>' );
 			$('#example').dataTable( {
-				"aaData": aDataSet,
+				"aaData": bDataSet,
 				"aoColumns": [
 					{ "sTitle": "Highlighted Feature" },
 					{ "sTitle": "Influence Rank" , "sClass": "center"},
