onsite page update

--- a/onsite.html
+++ b/onsite.html
@@ -299,6 +299,8 @@
 		  <div class="full_width big">
 			  Example with data from www.leighmans.com
 		  </div>
+		  
+		  <p>JSON.stringify(bDataSet, undefined, 2))</p>
 
 		  <h2>Onsite StatSEO Feature Influence</h2>
 		  <div id="dynamic">
