--- a/onsite.html
+++ b/onsite.html
@@ -123,27 +123,29 @@
 		];
 		
 	
-		
-		var bDataSet;
+		$(document).ready(function() {
+			var bDataSet;
 
-		$.getJSON('./json/test.json', function(data) {
-			bDataSet = data.items;
-			console.log(bDataSet);
+			$().getJSON('./json/test.json', function(data) {
+				bDataSet = data.items;
+				console.log(bDataSet);
+			});
 		});
 		
 		
 		$(document).ready(function() {
 			$('#dynamic').html( '<table cellpadding="0" cellspacing="0" border="0" class="display" id="example"></table>' );
 			$('#example').dataTable( {
-				"aaData": bDataSet,
+				"aaData": aDataSet,
 				"aoColumns": [
-					{ "sTitle": "Highlighted Feature" },
-					{ "sTitle": "Influence Rank" , "sClass": "center"},
-					{ "sTitle": "Losing Mean" , "sClass": "center"},
-					{ "sTitle": "Winning Mean" , "sClass": "center"},
-					{ "sTitle": "Mean Value (this domain)", "sClass": "center" },
+				{ "sTitle": "Highlighted Feature" },
+				{ "sTitle": "Influence Rank" , "sClass": "center"},
+				{ "sTitle": "Losing Mean" , "sClass": "center"},
+				{ "sTitle": "Winning Mean" , "sClass": "center"},
+				{ "sTitle": "Mean Value (this domain)", "sClass": "center" },
 				]
 			} );
+			console.log(aDataSet);
 				
 		} );
 			</script>
@@ -299,8 +301,6 @@
 		  <div class="full_width big">
 			  Example with data from www.leighmans.com
 		  </div>
-		  
-		  <p>JSON.stringify(bDataSet, undefined, 2))</p>
 
 		  <h2>Onsite StatSEO Feature Influence</h2>
 		  <div id="dynamic">
