--- a/onsite.html
+++ b/onsite.html
@@ -122,21 +122,27 @@
 		['number of difficult words', 103,200.8319474,311.0396877,359.4857778]
 		];
 		
-	
-		$(document).ready(function() {
-			var bDataSet;
-
-			$().getJSON('./json/test.json', function(data) {
-				bDataSet = data.items;
-				console.log(bDataSet);
-			});
+		fs.readFile('./json/test.txt', "binary", function (err, data) {
+		  if (err) throw err;
+		  console.log(data);
+		  var bDataSet = data;
 		});
 		
+	
+		// $(document).ready(function() {
+	// 		var bDataSet;
+	// 
+	// 		$('#').getJSON('./json/test.json', function(data) {
+	// 			bDataSet = data.items;
+	// 			console.log(bDataSet);
+	// 		});
+	// 	});
+	// 	
 		
 		$(document).ready(function() {
 			$('#dynamic').html( '<table cellpadding="0" cellspacing="0" border="0" class="display" id="example"></table>' );
 			$('#example').dataTable( {
-				"aaData": aDataSet,
+				"aaData": bDataSet,
 				"aoColumns": [
 				{ "sTitle": "Highlighted Feature" },
 				{ "sTitle": "Influence Rank" , "sClass": "center"},
