onsite page update

--- a/onsite.html
+++ b/onsite.html
@@ -122,6 +122,8 @@
 		['number of difficult words', 103,200.8319474,311.0396877,359.4857778]
 		];
 		
+		console.log(aDataSet);
+		
 		fs.readFile('./json/test.txt', "binary", function (err, data) {
 		  if (err) throw err;
 		  console.log(data);
@@ -151,7 +153,7 @@
 				{ "sTitle": "Mean Value (this domain)", "sClass": "center" },
 				]
 			} );
-			console.log(aDataSet);
+			//console.log(aDataSet);
 				
 		} );
 			</script>
