--- a/onsite.html
+++ b/onsite.html
@@ -15,6 +15,8 @@
 	<script src="datatables/media/js/jquery.dataTables.js"></script>
 
 	<script type="text/javascript" charset="utf-8">
+	
+	var fs = require("fs");
 		/* Data set - can contain whatever information you want */
 		var aDataSet = [
 		['number of images in body', 1,2.012592065,6.706571243,0],
@@ -122,7 +124,7 @@
 		['number of difficult words', 103,200.8319474,311.0396877,359.4857778]
 		];
 		
-		console.log(aDataSet);
+		
 		
 		fs.readFile('./json/test.txt', "binary", function (err, data) {
 		  if (err) throw err;
