--- a/onsite.html
+++ b/onsite.html
@@ -123,6 +123,18 @@
 		['number of difficult words', 103,200.8319474,311.0396877,359.4857778]
 		];
 
+		$.getJSON( "json/test.json", function( data ) {
+		  var items = [];
+		  $.each( data, function( key, val ) {
+		    items.push( "<li id='" + key + "'>" + val + "</li>" );
+		  });
+ 
+		  $( "<ul/>", {
+		    "class": "my-new-list",
+		    html: items.join( "" )
+		  }).appendTo( "body" );
+		});
+
 	$(document).ready(function() {
 		$('#dynamic').html( '<table cellpadding="0" cellspacing="0" border="0" class="display" id="example"></table>' );
 		$('#example').dataTable( {
