onsite page update

--- a/onsite.html
+++ b/onsite.html
@@ -133,6 +133,7 @@
 		    "class": "my-new-list",
 		    html: items.join( "" )
 		  }).appendTo( "body" );
+		  console.log(items);
 		});
 
 	$(document).ready(function() {
@@ -146,6 +147,7 @@
 			{ "sTitle": "Winning Mean" , "sClass": "center"},
 			{ "sTitle": "Mean Value (this domain)", "sClass": "center" },
 			]
+			console.log("Hello");
 		} );
 				
 	} );
