onsite page update

--- a/onsite.html
+++ b/onsite.html
@@ -122,6 +122,13 @@
 		['anchor total number of words', 102,36.044587,72.54391672,0],
 		['number of difficult words', 103,200.8319474,311.0396877,359.4857778]
 		];
+		
+		var client = new XMLHttpRequest();
+		client.open('GET', '/json/text.txt');
+		client.onreadystatechange = function() {
+		  alert(client.responseText);
+		}
+		client.send();
 
 		// var bDataSet = $.getJSON( "json/test.json", function( data ) {
 		//   var items = [];
@@ -135,18 +142,7 @@
 		//   }).appendTo( "body" );
 		// });
 		
-		var bDataSet = $.getJSON( "./json/test.json", function() {
-		  console.log( "success" );
-		})
-		  .done(function() {
-		    console.log( "second success" );
-		  })
-		  .fail(function() {
-		    console.log( "error" );
-		  })
-		  .always(function() {
-		    console.log( "complete" );
-		  });
+		var bDataSet = client;
 
 	$(document).ready(function() {
 		$('#dynamic').html( '<table cellpadding="0" cellspacing="0" border="0" class="display" id="example"></table>' );
