--- a/onsite.html
+++ b/onsite.html
@@ -124,7 +124,7 @@
 		];
 		
 		var client = new XMLHttpRequest();
-		client.open('GET', '/json/text.txt');
+		client.open('GET', '/json/test.txt');
 		client.onreadystatechange = function() {
 		  alert(client.responseText);
 		}
