--- a/onsite.html
+++ b/onsite.html
@@ -126,7 +126,7 @@
 		var client = new XMLHttpRequest();
 		client.open('GET', '/json/test.txt');
 		client.onreadystatechange = function() {
-		  alert(client.responseText);
+		  //alert(client.responseText);
 		}
 		client.send();
 
@@ -154,6 +154,26 @@
 			{ "sTitle": "Losing Mean" , "sClass": "center"},
 			{ "sTitle": "Winning Mean" , "sClass": "center"},
 			{ "sTitle": "Mean Value (this domain)", "sClass": "center" },
+			]
+		} );
+				
+	} );
+	$(document).ready(function() {
+		$('#dynamic2').html( '<table cellpadding="0" cellspacing="0" border="0" class="display" id="example2"></table>' );
+		$('#example2').dataTable( {
+			"aaData": bDataSet,
+			"aoColumns": [
+			{ "sTitle": "html url"},
+			{ "sTitle": "Number of images in body" , "sClass": "center"},
+			{ "sTitle": "Proximity of title tag words to external bound hyperlinks" , "sClass": "center"},
+			{ "sTitle": "Number of scripts" , "sClass": "center"},
+			{ "sTitle": "Number of hyperlinks" , "sClass": "center"},
+			{ "sTitle": "Title character length" , "sClass": "center"},
+			{ "sTitle": "Number of external CSS styles" , "sClass": "center"},
+			{ "sTitle": "Number of titles same as h1" , "sClass": "center"},
+			{ "sTitle": "Title total number of syllables" , "sClass": "center"},
+			{ "sTitle": "Anchor number of unique words" , "sClass": "center"},
+			{ "sTitle": "Total number of dictionary words" , "sClass": "center"},
 			]
 		} );
 				
