--- a/onsite.html
+++ b/onsite.html
@@ -142,7 +142,7 @@
 		//   }).appendTo( "body" );
 		// });
 		
-		var bDataSet = client.responseText;
+		var bDataSet = client.responseXML;
 
 	$(document).ready(function() {
 		$('#dynamic').html( '<table cellpadding="0" cellspacing="0" border="0" class="display" id="example"></table>' );
