--- a/onsite.html
+++ b/onsite.html
@@ -160,7 +160,7 @@
 	} );
 	
 	$(document).ready(function() {
-	    var oTable = $('#example3').dataTable( {
+	    var oTable = $('#exampleJSONp').dataTable( {
 	        "bProcessing": true,
 	        "sAjaxSource": "/json/test.txt",
 	        "aoColumns": [
@@ -176,6 +176,14 @@
 			{ "mData": "Anchor number of unique words"},
 			{ "mData": "Total number of dictionary words"}
 	        ]
+	    } );
+	} );
+	
+	$(document).ready(function() {
+	    $('#example3').dataTable( {
+	        "bProcessing": true,
+	        "sAjaxSource": "/json/test_format.txt",
+	        "sAjaxDataProp": "demo"
 	    } );
 	} );
 	
@@ -363,7 +371,7 @@
 		  <hr>
 		  
 		  <h2>Onsite StatSEO Influential Feature Delta to Winning Mean</h2>
-		  <p>From JSONp</p>
+		  <p>From custom text data file</p>
 		  <div id="dynamic">
 			  <table cellpadding="0" cellspacing="0" border="0" class="display" id="example3">
 				  <thead>
@@ -376,9 +384,7 @@
 					  </tr>
 				  </thead>
 				  <tbody>
-					  <tr>
-						  <td colspan="5" class="dataTables_empty">Loading data from server</td>
-					  </tr>
+					  
 				  </tbody>
 				  <tfoot>
 					  <tr>
